[package]
name = "chain_loader"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy_dll = { path = "../proxy_dll" }
windows = { version = "0.58.0", features = ["Win32_System_LibraryLoader"] }
